--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="description">
                 <h1>Réservez le menu qui vous convient</h1>
                 <p class="p_description">Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
-                <button type="submit"  class="rechercher">Commander</button>
+                <button type="submit"  class="rechercher">Explorez nos restaurants</button>
                 </div>
             </section>
 
